// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown inline should render text in a span 1`] = `
<span className="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16">
  Hello world!
</span>
`;

exports[`Markdown should render a blockquote 1`] = `
<blockquote className="rsg--blockquote-25">
  <p className="rsg--para-2">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>
`;

exports[`Markdown should render a horizontal rule 1`] = `<hr className="rsg--hr-28">`;

exports[`Markdown should render a table 1`] = `
<table className="rsg--table-29">
  <thead className="rsg--thead-30">
    <tr>
      <th className="rsg--th-32 rsg--td-31">
        heading 1
      </th>
      <th className="rsg--th-32 rsg--td-31">
        heading 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td className="rsg--td-31">
        foo
      </td>
      <td className="rsg--td-31">
        bar
      </td>
    </tr>
    <tr>
      <td className="rsg--td-31">
        more foo
      </td>
      <td className="rsg--td-31">
        more bar
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Markdown should render check-lists 1`] = `
<ul className="rsg--list-21">
  <li className="rsg--li-23">
    <input type="checkbox"
           readonly
           className="rsg--input-24"
    >
    to do 1
  </li>
  <li className="rsg--li-23">
    <input type="checkbox"
           readonly
           className="rsg--input-24"
    >
    to do 2
  </li>
  <li className="rsg--li-23">
    <input type="checkbox"
           checked
           readonly
           className="rsg--input-24"
    >
    to do 3
  </li>
</ul>
`;

exports[`Markdown should render code blocks without escaping 1`] = `
<pre className="lang-html rsg--pre-26">
  <foo>
  </foo>
</pre>
`;

exports[`Markdown should render emphasis and strong text 1`] = `
<div>
  <p className="rsg--para-2">
    this text is
    <strong className="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--strong-19">
      strong
    </strong>
  </p>
  <p className="rsg--para-2">
    and this is
    <em className="rsg--text-11 rsg--inheritSize-12 rsg--baseColor-16 rsg--em-18">
      emphasized
    </em>
  </p>
</div>
`;

exports[`Markdown should render headings with generated ids 1`] = `
<div>
  <div className="rsg--spacing-3">
    <h1 id="one"
        className="rsg--heading-4 rsg--heading1-5"
    >
      one
    </h1>
  </div>
  <div className="rsg--spacing-3">
    <h2 id="two"
        className="rsg--heading-4 rsg--heading2-6"
    >
      two
    </h2>
  </div>
  <div className="rsg--spacing-3">
    <h3 id="three"
        className="rsg--heading-4 rsg--heading3-7"
    >
      three
    </h3>
  </div>
  <div className="rsg--spacing-3">
    <h4 id="four"
        className="rsg--heading-4 rsg--heading4-8"
    >
      four
    </h4>
  </div>
  <div className="rsg--spacing-3">
    <h5 id="five"
        className="rsg--heading-4 rsg--heading5-9"
    >
      five
    </h5>
  </div>
  <div className="rsg--spacing-3">
    <h6 id="six"
        className="rsg--heading-4 rsg--heading6-10"
    >
      six
    </h6>
  </div>
</div>
`;

exports[`Markdown should render inline code with escaping 1`] = `
<p className="rsg--para-2">
  Foo
  <code className="rsg--code-27">
    &lt;bar&gt;
  </code>
  baz
</p>
`;

exports[`Markdown should render links 1`] = `
<p className="rsg--para-2">
  a
  <a href="http://test.com"
     className="rsg--link-0"
  >
    link
  </a>
</p>
`;

exports[`Markdown should render mixed nested lists 1`] = `
<ul className="rsg--list-21">
  <li className="rsg--li-23">
    list 1
  </li>
  <li className="rsg--li-23">
    list 2
    <ol className="rsg--list-21 rsg--ordered-22">
      <li className="rsg--li-23">
        Sub-list
      </li>
      <li className="rsg--li-23">
        Sub-list
      </li>
      <li className="rsg--li-23">
        Sub-list
      </li>
    </ol>
  </li>
  <li className="rsg--li-23">
    list 3
  </li>
</ul>
`;

exports[`Markdown should render ordered lists 1`] = `
<ol className="rsg--list-21 rsg--ordered-22">
  <li className="rsg--li-23">
    list
  </li>
  <li className="rsg--li-23">
    item
  </li>
  <li className="rsg--li-23">
    three
  </li>
</ol>
`;

exports[`Markdown should render paragraphs 1`] = `
<div>
  <p className="rsg--para-2">
    a paragraph
  </p>
  <p className="rsg--para-2">
    another paragraph
  </p>
</div>
`;

exports[`Markdown should render pre-formatted text 1`] = `
<pre className="rsg--pre-26">
  this is preformatted
so is this
</pre>
`;

exports[`Markdown should render unordered lists 1`] = `
<ul className="rsg--list-21">
  <li className="rsg--li-23">
    list
  </li>
  <li className="rsg--li-23">
    item
  </li>
  <li className="rsg--li-23">
    three
  </li>
</ul>
`;
